(preferences) fix word wrap
Remove array from usage statistics

(preferences) fix word wrap

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -341,5 +341,5 @@ img.thumbnail {
 }
 
 .pure-control-group label {
-    width: 10.6em; /* Enlarged width for long words, is needed for RU translation. */
+  word-wrap: normal;
 }
